--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-tp1/terraform/.terraform/
-tp1/terraform/.terraform.lock.hcl
-tp1/terraform/terraform.tfstate
-tp1/terraform/terraform.tfstate.backup
-tp1/terraform/terraform.tfvars
-tp1/terraform/tfplan
+tp1&2/terraform/.terraform/
+tp1&2/terraform/.terraform.lock.hcl
+tp1&2/terraform/terraform.tfstate
+tp1&2/terraform/terraform.tfstate.backup
+tp1&2/terraform/terraform.tfvars
+tp1&2/terraform/tfplan
+
+tp3/terraform/.terraform/
+tp3/terraform/.terraform.lock.hcl
+tp3/terraform/terraform.tfstate
+tp3/terraform/terraform.tfstate.backup
+tp3/terraform/terraform.tfvars
+tp3/terraform/tfplan
